@@ -12,11 +12,25 @@ Group Members:
 <p>Othello (A slight variant of Reversi), is a strategical board game played by two players on an 8x8 uncheckered board. The main objective is for a player to have a majority of their pieces occupying the board. A player is able to take control over the other player's area of the board if they are able to enclose the other player's pieces within a line, example being "XOOOO" placing an X in the last spot -> "XOOOX -> "XXXXX".The game ends when neither player is able to make any more moves, and a winner is decided based on which player controls the most area.</p>
 
 How to run:
+<<<<<<< HEAD
+Here are the steps to run our application.
+You will need Java 11, you can download it here oracle.com/ca-en/java/technologies/javase-jdk11-downloads.html
+
+1. Open up a terminal of your choice such as cmd.
+2. You will then navigate to a folder you wish to clone our project using the terminal. 
+3. Type git clone and then the link to our github page. The repository wil now be on your computer.
+4. Open up our repository in an IDE of your choice, this tutorial will use Intellij
+5. Click File and edit project structure, make the language Java 11 and make sure you have the required
+packages to run the application.
+6. Go to run and edit configurations, create 2 running applications, one for the Main Class and one for the Server Class, 
+make sure you use VM options and include the packages.
+In your VM options make sure to put this line:
+--module-path "Replace this with path to jdk/lib" --add-modules javafx.controls,javafx.fxml
+=======
 1. Open up a terminal of your choice such as command prompt.
 2. Navigate to a folder you wish to clone our project to using the terminal.
 3. Type git clone and then the link to our github page. The copy of our repository wil now be on your computer.
 4. Open up our repository in an IDE of your choice, this tutorial will use Intellij.
 5. Click File and edit project structure, make the language Java 11 and make sure you have the required packages to run the application.
 6. Go to run and edit configurations, create 2 running applications, one for the Main Class and one for the Server Class, make sure you use VM options and include the packages.
-7. Run the Server class first, followed by the Main class.
-8. Click the 'connect' button in order to connect to the server and start playing the game.
+
